# multi-modal-rag-with-colpali

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SUPPORT.md  multi-modal-rag-with-colpali.code-workspace
.github/workflows/: ci.yml
helm/: README.md
helm/colpali-stack/: Chart.yaml  README.md  values.yaml
helm/colpali-stack/templates/: app-secrets.yaml  colqwen-inference.yaml  document-processor.yaml  nvidia-device-plugin.yaml  qdrant-ingress.yaml  service-account.yaml
infra/: README.md
infra/src/: main.bicep  main.bicepparam
infra/src/modules/: aiFoundry.bicep  aks.bicep  aksFederatedIdentity.bicep  aml.bicep  amlSupporting.bicep  computeCluster.bicep  computeIdentity.bicep  computeInstance.bicep  containerApps.bicep  containerAppsSupporting.bicep  containerRegistry.bicep  dataStorage.bicep  eventGrid.bicep  keyVault.bicep  monitoring.bicep  onlineEndpoint.bicep  roleAssignments.bicep  serviceBus.bicep
modules/: README.md
modules/agent/: .dockerignore  Dockerfile  Dockerfile.chainlit  README.md  pyproject.toml
modules/agent/src/: agent.py  app.py  chainlit_ui.py  document_retriever.py  models.py  prompts.yaml
modules/agent/src/agent/: agent.py  app.py  chainlit_ui.py  document_retriever.py  models.py  setup_logging.py
modules/colpali/: Dockerfile  README.md  pipeline.py  pyproject.toml
modules/colpali/scripts/: deploy_endpoint.py  download_model.py
modules/colpali/src/: app.py  inference.py  logging.py  models.py  score.py
modules/colpali_inference/: .dockerignore  Dockerfile  Dockerfile.vllm  README.md  pyproject.toml
modules/colpali_inference/src/colpali_inference/: app.py  download_model.py  inference.py  models.py  setup_logging.py  vllm_client.py
modules/colqwen/: Dockerfile  pyproject.toml
modules/colqwen/src/: app.py  inference.py  models.py
modules/colqwen_inference/: .dockerignore  README.md  pyproject.toml
modules/colqwen_inference/src/: app.py  inference.py  models.py  setup_logging.py
modules/document_processor/: .dockerignore  Dockerfile  README.md  pyproject.toml
modules/document_processor/scripts/: test_local.py
modules/document_processor/src/: __init__.py  app.py  colpali_client.py  document_processor.py  logging.py  models.py  qdrant_index.py  search_indexer.py
modules/document_processor/src/document_processor/: app.py  colpali_client.py  document_processor.py  models.py  qdrant_index.py
modules/helm/: README.md
modules/helm/colpali-stack/: .helmignore  Chart.yaml  README.md  values.yaml
modules/helm/colpali-stack/templates/: _helpers.tpl  agent-api.yaml  agent-ui.yaml  app-secrets.yaml  colpali-inference.yaml  document-processor.yaml  ingress.yaml  qdrant-ingress.yaml
modules/index/: README.md  pyproject.toml
modules/index/scripts/: deploy_qdrant.py
modules/infra/: README.md
modules/infra/src/: main.bicep  main.bicepparam
modules/infra/src/k8s/: dcgm-exporter.yaml  gpu-resources-namespace.yaml  namespace-spot-tolerations.yaml  nvidia-device-plugin.yaml
modules/infra/src/modules/: aiFoundry.bicep  aks.bicep  containerRegistry.bicep  dataStorage.bicep  eventGrid.bicep  keyVault.bicep  monitoring.bicep  roleAssignments.bicep  serviceBus.bicep
scripts/: README.md  apply_helm.ps1  build_all.ps1  build_container.ps1  deploy_infra.ps1
scripts/linux/: apply_helm.sh  build_all.sh  build_colqwen.sh  build_container.sh  build_document_processor.sh  deploy_endpoint.sh  deploy_index.sh  deploy_infra.sh  register_model.sh
scripts/windows/: apply_helm.ps1  build_all.ps1  build_colqwen.ps1  build_container.ps1  build_document_processor.ps1  deploy_endpoint.ps1  deploy_index.ps1  deploy_infra.ps1  register_model.ps1
