[project]
name = "colpali-deployment"
version = "0.1.0"
description = "ColPali model deployment for Azure ML"
authors = [
    {name = "Ben Constable", email = "benconstable@microsoft.com"}
]
dependencies = [
    # Core ML dependencies for score.py inference - pinned to working versions
    "torch>=2.7.0,<2.8.0",
    "torchvision>=0.22.0,<0.23.0",
    "transformers==4.53.1",
    "colpali-engine==0.3.11",
    "pillow>=10.0.0",
    "numpy==2.3.4",
    "accelerate==1.11.0",
    "einops==0.8.1",
    "huggingface-hub[hf-xet]==0.36.0",
    "azureml-inference-server-http==1.5.0",
    "peft==0.14.0",
    "pre-commit>=4.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

# Only include deploy dependencies by default (no flash-attn for local development)
default-groups = ["deploy"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
deploy = [
    "azure-ai-ml>=1.12.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0.0",
]
score = [
    "flash-attn==2.8.3",
]
