[project]
name = "colpali-inference"
version = "0.1.0"
description = "Kubernetes-native ColPali inference service for document understanding and embedding generation"
authors = [
    {name = "Ben Constable", email = "benconstable@microsoft.com"},
    {name = "Nina Stijepovic", email = "nstijepovic@microsoft.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # FastAPI web framework
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.0.0",
    # CPU-only ML deps (model serving lives in the vLLM sidecar — the shim
    # only tokenizes and runs pooling math on CPU).
    "torch>=2.7.0,<2.8.0",
    "transformers>=4.57.1,<4.58.0",
    # colpali-engine is kept solely for HierarchicalTokenPooler. No model
    # loading from this package any more.
    "colpali-engine==0.3.13",
    "pillow>=10.0.0",
    "numpy==2.3.4",
    "huggingface-hub[hf-xet]==0.36.0",
    # HTTP client and utilities
    "aiohttp>=3.13.2",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    # Environment management
    "python-dotenv>=1.0.0",
    # Azure Monitor OpenTelemetry for Application Insights
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[tool.uv]
prerelease = "explicit"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.7",
]
