[project]
name = "colqwen2-document-processor"
version = "0.1.0"
description = "Service Bus Consumer Service for processing documents with ColPali via message queue"
authors = [
    {name = "Ben Constable", email = "benconstable@microsoft.com"},
    {name = "Nina Stijepovic", email = "nstijepovic@microsoft.com"}
]
requires-python = ">=3.11,<=3.12"
dependencies = [
    "pydantic>=2.0.0",
    # Azure services
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "azure-servicebus>=7.12.0",
    # Azure AI Search
    "azure-search-documents>=11.4.0",
    # QDRANT vector database
    "qdrant-client==1.15.0",
    # HTTP and API requests
    "requests>=2.31.0",
    # Image processing
    "Pillow>=10.1.0",
    "numpy>=1.24.0",
    # PDF processing
    "pymupdf>=1.23.0",
    "aiohttp>=3.13.2",
    "tenacity>=9.1.2",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # Azure Monitor OpenTelemetry for Application Insights
    "azure-monitor-opentelemetry>=1.6.0",
]
readme = "README.md"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
