[project]
name = "colpali-index"
version = "0.1.0"
description = "ColPali document index for AI Search"
authors = [
    {name = "Ben Constable", email = "benconstable@microsoft.com"}
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.uv]
default-groups = ["deploy"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
deploy = [
    "azure-search-documents>=11.7.0b1",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-core>=1.29.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
]
